--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile Salll </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Project_Cv/assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     
 </head>
@@ -18,7 +18,7 @@
                     <div class="col-4">
                         <div class="cart_1">
                             <div class="header_img">
-                                <img src="/Project_Cv/img/luffy.jpg" alt="">
+                                <img src="Project_Cv/assets/img/luffy.jpg" alt="">
                             </div>
                             <div class="contact">
                                 <h3>CONTACT</h3>
@@ -62,7 +62,7 @@
                             <div class="profile">
                                 <h3>Profile</h3>
                                 <hr>
-                                <p>Second-year Software Engineering student with practical experience in mobile app development using Flutter and a solid background in UI design. Passionate about building smooth, user-friendly mobile applications for both Android and iOS platforms. Skilled in using Figma, Photoshop, and Illustrator to design clean and modern interfaces, and experienced in implementing those designs using Flutter and Dart. Developed several small projects to strengthen mobile development and front-end coding skills. Fluent in English and eager to contribute creativity, problem-solving ability, and technical knowledge to internships or junior developer role</p>
+                                <p>I am currently a second-year student majoring in Computer Science at the Royal University of Phnom Penh (RUPP). Over the past two years, I have gained a solid foundation in programming, data structures, and computer systems. My studies have included both theoretical and practical subjects, such as algorithms, web development, and databases. I enjoy learning how technology works and solving problems through code. Working on projects and assignments has helped me improve my logical thinking and technical skills. I am also exploring areas like artificial intelligence and software engineering to prepare for a future career in the tech industry.</p>
                             </div>
                             <div class="Skill_Experience">
                                 <h3>SKILL EXPERIENCE</h3>
